--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-template",
+  "name": "offline-chatbot",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "build:css": "postcss src/styles/tailwind.css -o src/styles/output.css",
-    "server": "nodemon server/index.js",
+    "server": "nodemon --exec tsx server/index.ts",
     "start": "concurrently \"npm run dev\" \"npm run server\"",
     "test": "vitest"
   },
@@ -107,6 +107,7 @@
     "npm": "^11.0.0",
     "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.0.2",
     "vite": "^5.1.4",
