--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "build:css": "postcss src/styles/tailwind.css -o src/styles/output.css",
     "server": "nodemon --exec tsx server/index.ts",
-    "start": "concurrently \"npm run dev\" \"npm run server\"",
+    "cleanup-ports": "tsx server/startup.js",
+    "cleanup-ports:skip": "tsx server/startup.js --skip-cleanup",
+    "start": "npm run cleanup-ports && concurrently \"npm run dev\" \"npm run server\"",
     "test": "vitest"
   },
   "dependencies": {
