--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "nanoid": "^4.0.2",
     "next-themes": "^0.4.6",
     "ollama": "^0.5.6",
+    "pdfjs-dist": "^3.11.174",
     "react": "19.0.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.0.0",
