--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/themes": "^3.1.6",
     "@tailwindcss/vite": "^4.1.15",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -71,7 +72,9 @@
     "react-resizable-panels": "^3.0.4",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
+    "react-syntax-highlighter": "^16.0.0",
     "recharts": "^2.15.4",
+    "refractor": "^5.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
