--- a/package.json
+++ b/package.json
@@ -55,16 +55,15 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "embla-carousel-react": "^8.6.0",
+    "esbuild": "^0.25.11",
     "express": "^4.21.1",
     "framer-motion": "^12.6.3",
     "input-otp": "^1.4.2",
+    "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.462.0",
-    "multer": "^1.4.5-lts.1",
-    "nanoid": "^4.0.2",
     "next-themes": "^0.4.6",
     "ollama": "^0.5.6",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^5.4.296",
     "react": "19.0.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.0.0",
@@ -74,25 +73,15 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
     "react-syntax-highlighter": "^16.0.0",
-    "recharts": "^2.15.4",
-    "refractor": "^5.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "sass": "^1.62.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.15",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
-    "zod": "^4.0.17"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
